[gd_scene load_steps=4 format=3 uid="uid://blg18x6bepm0x"]

[ext_resource type="Script" path="res://Scenes/Battle/range_area.gd" id="1_aa4ha"]
[ext_resource type="Texture2D" uid="uid://c2evelm6nd8vr" path="res://Assets/Tiles/Temp_Asset-Tile_Selected.png" id="1_m3ijl"]
[ext_resource type="Texture2D" uid="uid://b0wm53dxrw8t4" path="res://Assets/Tiles/Temp_Asset-Tile_Selected_5.png" id="3_x1sf4"]

[node name="Poin_Range" type="Node2D"]
z_index = -1
script = ExtResource("1_aa4ha")

[node name="Range_area" type="Area2D" parent="."]
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Range_area"]
polygon = PackedVector2Array(0, 20, 40, 0, 0, -20, -40, 0)

[node name="Polygon2D" type="Polygon2D" parent="."]
modulate = Color(1, 1, 1, 0.392157)
polygon = PackedVector2Array(0, 30, 50, 0, 0, -30, -50, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_m3ijl")

[node name="Hover" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 0.392157)
position = Vector2(0, -10)
texture = ExtResource("3_x1sf4")

[connection signal="area_entered" from="Range_area" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Range_area" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Range_area" to="." method="_on_range_area_body_entered"]
[connection signal="body_exited" from="Range_area" to="." method="_on_range_area_body_exited"]
[connection signal="mouse_entered" from="Range_area" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Range_area" to="." method="_on_area_2d_mouse_exited"]
